--- a/style.css
+++ b/style.css
@@ -6,3 +6,18 @@ h1
 {
     background-color: aliceblue;
 }
+h2{
+    background-color: chartreuse;;
+}
+h3
+{
+     background-color: crimson;
+}
+h4
+{
+    background-color: gold;
+}
+h5
+{
+    background-color: lightpink;
+}
